Adjust/fix select box spacing

--- a/src/interpreter/html/style.css
+++ b/src/interpreter/html/style.css
@@ -75,13 +75,13 @@ p {
 div#butterfly {
   padding: 1em;
   display: flex;
-  gap: 0.5em;
+  gap: 0.25em;
   width: 100%;
-  overflow: auto;
 }
 
 select {
   flex-grow: 1;
+  width: 25%;
   background: rgba(0,0,0,0.05);
   height: 2.5em;
   text-overflow: ellipsis;
@@ -89,6 +89,10 @@ select {
   color: inherit;
   font-family: inherit;
   font-size: 1em;
+}
+
+select:nth-child(1) {
+  flex-grow: 2;
 }
 
 select:hover {
@@ -183,7 +187,7 @@ td:nth-child(2) {
   div#butterfly {
     position: sticky;
     top: 0;
-    padding: calc((4.5 * 100vw / 28 - 40px) / 2) 1em;
+    padding: calc((4.5 * 100vw / 28 - 40px) / 2);
   }
 
   select {
